public/css/stylesheet-override2.css
/* ... */
@media screen and (max-width: 572px) {
  .wdot-dkgreen {
    padding-left: 20px;
  }
}

footer .social-row a {
  border: none;
}

/* ==== Navigation ======= */
#header,
.navwrap {
  z-index: 8888;
  position: static;
}

.navbar a {
  text-decoration: none !important;
}
.header-container,
.nav-container {
  padding-left: 5%;
  padding-right: 5%;
  margin: 0;
}
.navwrap {
  width: 100%;
  margin-top: 1.5rem;
}
#nav2 {
  padding-top: 0.8rem;
  justify-content: flex-start;
}

#navbar {
  justify-content: flex-end;
  padding-right: 5%;
}

ul.dropdown-menu {
  padding: 1rem 1rem 1rem 2rem;
  font-size: 1.3rem !important;
  width: 95%;
  top: 5rem;
  left: -2rem;
  border-radius: 5px;
  position: absolute;
  z-index: 9999;
  transform: skewX(-10deg);
  transition: all 0.3s;
  border: #33957f 2px solid;
}
.dropdown:hover .dropdown-menu {
  display: block;
}
.dropdown-menu li .nav-rhombus {
  padding: 0.8rem;
  color: var(--primary-color);
  margin-bottom: 1rem;
  transform: skewX(-5deg);
}
li .nav-rhombus:hover {
  border-bottom: 2px solid var(--primary-color);
}

@media (max-width: 767px) {
  #nav2 {
    flex-direction: column;
    justify-content: center;
    gap: 1rem;
  }

  .navwrap {
    margin-top: 0;
    position: static;
    background-color: #fff;
  }

  ul.dropdown-menu {
    position: relative;
    top: 0;
  }
}

@media (min-width: 768px) {
  /* main {
    padding-top: 10rem;
  } */

  #navbar {
    padding-right: 0;
  }
}

/* ===== Contact Page ==== */

.contact-main h1 {
  margin: 5rem 0rem;
  color: var(--primary-color);
}

.col-left {
  padding: 0 2rem 0 6rem;
}

.contact-main {
  padding-left: 5%;
  padding-right: 5%;
}

.contact-h3 {
  display: flex;
  align-items: center;
  gap: 1rem;
}

.li-lead {
  font-weight: 600;
}

form .btn-custom,
.btn-custom {
  text-align: center;
  margin-left: 2rem;
  padding: 8px 80px !important;
}
.contact-list {
  font-size: 1em;
}
.contact-list li {
  font-size: 1.2em;
}
.contact-article > div {
  margin: auto 2rem;
}

.social-media-list i {
  margin-right: 1rem;
}
.p-list li:not(:last-child) {
  padding-bottom: 0rem;
}
.comment-form-container {
  padding-bottom: 2em;
}

.contact-main .fa {
  color: var(--primary-color);
}

.mail-list,
.p-list {
  list-style: none;
}

label[for="sgE-7407183-1-13-element"]::after {
  content: "*";
  color: red;
}

/* .sidebar {
    display: flex;
    flex-wrap: wrap;
    gap: 1rem;
    margin-bottom: 2rem;
    justify-content: center;
}
.sidebar-card {
     padding: 8px;
    border: 2px solid var(--card-border);
    width: 100%;
    max-width: 280px;
   
}
.card-content{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 4px;
}
.sidebar_text,
p.sidebar_text {
   font-size: 12px;
   line-height: 1.2em;
   padding-bottom: 0;
}
.sidebar-card_img,
.sidebar-card_img img {
    width: 100%;

}

.sidebar-email {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    width: 100%;

}
.sidebar-email label {
    margin: 0;
}
#sidebar .btn-primary {
    width: 80%;
    padding: 10px 0px;

}
.sidebar-email button[type="submit"] {
    text-align: center;
    align-self: center;
    margin-top: 1em;
    padding: 10px;
}

.button,
a.button {
    text-align: center;
    width: 100%;
    align-self: center;
    padding: 10px;
    background-color: var(--primary-color);
    color: #fff !important;
    text-decoration: none;
    border: none;
} */

/* === Events and Outreach === */

#outreach-main h1 {
  margin: 5rem 0rem 0em;
  color: var(--primary-color);
}
#outreach-main h2 {
  font-size: 1.7em;
  line-height: 1.3;
  font-weight: bold;
  margin-bottom: 1em;
}
.cal-placeholder {
  width: 100%;
}

/* === Side bar === */
.card-body h3 {
  text-align: left;
}
.card-body p {
  line-height: 1.6em;
  font-size: 1em;
  text-align: left;
}
.card-body .card-subtext {
  font-size: 0.8em;
  line-height: 1.3em;
  margin-bottom: 0;
}

.card-body .icon-lg {
  font-size: 8rem;
}
.icon-container {
  margin-bottom: 1em;
}

.header-link-color a:hover {
  color: #99cabf !important;
}
.alert-box {
  padding: 5px 13px;
  background: #ffb500;
  width: 80%;
}
.alert-body {
  width: 80%;
  border: 2px solid;
  border-color: #ffb500;
}

#map-navlink {
  background-color: #007b5f !important;
  color: #fff !important;
}

@media (max-width: 1200px) {
}

.center-btn {
  display: grid;
  place-content: center;
}

.card-btn-container {
  display: grid;
  place-content: center;
  margin-bottom: 1rem;
  line-height: 0;
  gap: 0.5rem;
}
.card-btn-container .btn-primary {
  margin: 0;
}

.greenborder {
  border: 5px solid #007b5f;
}

.map-container {
  width: 100%;
  height: 100vh;
}

.options-container {
  display: flex;
  flex-direction: column;
  padding: 10px;
}

.date-picker-container {
  display: flex;
  justify-content: space-around;
  padding: 10px;
}

.checkbox-container {
  display: flex;
  justify-content: space-around;
  padding: 10px;
}

.checkbox-item {
  margin-right: 12px;
}

.map-container {
  width: 100%;
  height: 100vh;
  position: relative; /* Make sure the map is positioned relative so other elements can be absolute to it */
  z-index: 0 !important; /* The map has the lowest z-index */
}

.options-container {
  background-color: white;
  color: hotpink;
  padding: 20px;
  border-radius: 5px;
  z-index: 10000 !important;
  /* margin-top: -auto; */
}

.date-picker-container {
  display: flex;
  justify-content: space-between;
  padding: 10px;
}

.checkbox-container {
  display: flex;
  justify-content: space-around;
  padding: 10px;
}

.checkbox-item {
  margin-right: 12px;
}
input[type="checkbox"]:checked {
  background-color: #007b5f;
}

/* Style the submit button */
input[type="submit"] {
  background-color: #007b5f !important;
  color: white; /* Text color */
  border: none; /* Remove the default border */
  cursor: pointer; /* Change the cursor when you hover over it */
  padding: 10px 20px; /* Add some padding */
}
/* ... */

